judgegirl/OpenCL/10092. OpenCL Build Program Debug/testdata/1.out
<kernel>:4:2: error: use of undeclared identifier 'opencl'
        opencl;
        ^
